# AI-Legal-chatbot

./: .dockerignore  .env  .env.example  .gitignore  BENCHMARK_REPORT.md  Dockerfile  README.md  automation design.md  benchmark.py  docker-compose.yml  pyproject.toml
.agents/skills/debug-backend-docker/: SKILL.md
.generated_docs/docs_index/faq/: sample_faq.md
.generated_docs/docs_index/law/: 24-2018-qh14_2012202520.md  6. Luật Dữ liệu.md  Luật An ninh mạng.md  Luật Dữ liệu.md  Luật an ninh mạng 2025.md
.generated_docs/docs_index/policy/: isms.md
app/: agent.py  config.py  doc_index.py  llm.py  main.py  prompts.py  source_main.py  ui.py  workspace.py
app/automation/: __init__.py  config.py  event_store.py  event_ui.py  gmail_client.py  ingestor.py  mail_filter.py  models.py  poller.py  routes.py  runtime.py  source_ui.py  subscriber_store.py
data/: event_log.json  mail_state.json
docs/faq/: sample_faq.md
docs/law/: 6. Luật Dữ liệu.md  Luật An ninh mạng.md  Luật an ninh mạng 2025.md
docs/policy/: isms.md
tests/: test_event_store.py  test_ingestor.py  test_mail_filter.py
