[project]
name = "ai-legal-mvp"
version = "0.1.0"
description = "AI Legal MVP - Docs-grounded legal/policy Q&A chatbot"
requires-python = ">=3.11"
dependencies = [
    "nicegui>=2.0.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "deepagents>=0.1.0",
    "python-dotenv>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]
